--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "volleyball-data-project"
+name = "volleyballdata"
 version = "0.1.0"
 description = "Analyze player indicators in the Taiwan volleyball league by scraping data from a publicly accessible website"
 authors = ["HHsieh09 <henryfbs01@gmail.com>"]
@@ -14,9 +14,14 @@ pydantic = "1.8.1"
 loguru = "0.5.3"
 beautifulsoup4 = "^4.13.3"
 lxml = "^5.3.1"
+pytest = "^8.3.5"
+sqlalchemy = "^2.0.39"
+pymysql = "^1.1.1"
+sync = "^1.0.0"
 
 [tool.poetry.dev-dependencies]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
