--- a/mysql.yml
+++ b/mysql.yml
@@ -2,12 +2,13 @@ version: '3.3'
 services:
 
   mysql:
+
     image: mysql:8.0
 
     container_name: mysql_container
 
     # Setup mysql to use self-based hash password
-    command: mysqld --default-authentication-plugin=mysql_native_password
+    command: mysqld --default-authentication-plugin=mysql_native_password --bind-address=0.0.0.0
 
     # Setup port mapping
     ports:
@@ -16,9 +17,10 @@ services:
     # Setup environment variables
     environment:
       MYSQL_ROOT_PASSWORD: test
-      MYSQL_DATABASE: mydb
+      MYSQL_DATABASE: volleyballdb
       MYSQL_USER: user
       MYSQL_PASSWORD: test
+      MYSQL_ROOT_HOST: "%"
 
     # Setup volume to prevent data loss
     volumes:
@@ -27,6 +29,8 @@ services:
     networks:
       - dev
 
+    restart: always
+
   # Setup phpmyadmin
   phpmyadmin:
     image: phpmyadmin/phpmyadmin:5.1.0
@@ -34,7 +38,7 @@ services:
     container_name: phpmyadmin_container
 
     environment:
-      PMA_HOST: 172.18.0.2 # Use the actual IP from the previous command
+      PMA_HOST: 172.17.0.1 # Use the actual IP from the previous command
       MYSQL_ROOT_PASSWORD: test
 
     #links:
