--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pytest = "^8.3.5"
 sqlalchemy = "^2.0.39"
 pymysql = "^1.1.1"
 sync = "^1.0.0"
+cryptography = "42.0.0"
 
 [tool.poetry.dev-dependencies]
 
