--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,10 @@ sqlalchemy = "^2.0.39"
 pymysql = "^1.1.1"
 sync = "^1.0.0"
 cryptography = "42.0.0"
+worker = "^2018.4.1"
+celery = "^5.4.0"
+amqp = "^5.3.1"
+kombu = "^5.5.1"
 
 [tool.poetry.dev-dependencies]
 
