--- a/rabbitmq.yml
+++ b/rabbitmq.yml
@@ -12,7 +12,7 @@ services:
       RABBITMQ_DEFAULT_PASS: "worker"
       RABBITMQ_DEFAULT_VHOST: "/"
     networks:
-      - dev
+      - vbnetwork
 
   flower:
     image: mher/flower:0.9.5
@@ -23,7 +23,8 @@ services:
     depends_on:
       - rabbitmq
     networks:
-      - dev
+      - vbnetwork
 
 networks:
-  dev:
+  vbnetwork:
+    external: true
