--- a/local.ini
+++ b/local.ini
@@ -10,12 +10,12 @@ MESSAGE_QUEUE_HOST = host.docker.internal
 MESSAGE_QUEUE_PORT = 5672
 
 [RELEASE]
-MYSQL_HOST = 127.0.0.1
+MYSQL_HOST = mysql
 MYSQL_USER = user
 MYSQL_PASSWORD = test
 MYSQL_PORT = 3306
 MYSQL_DATABASE = volleyballdb
 WORKER_ACCOUNT = worker
 WORKER_PASSWORD = worker
-MESSAGE_QUEUE_HOST = 127.0.0.1
+MESSAGE_QUEUE_HOST = rabbitmq
 MESSAGE_QUEUE_PORT = 5672
