--- a/local.ini
+++ b/local.ini
@@ -17,5 +17,5 @@ MYSQL_PORT = 3306
 MYSQL_DATABASE = volleyballdb
 WORKER_ACCOUNT = worker
 WORKER_PASSWORD = worker
-MESSAGE_QUEUE_HOST = rabbitmq
+MESSAGE_QUEUE_HOST = host.docker.internal
 MESSAGE_QUEUE_PORT = 5672
