--- a/mysql.yml
+++ b/mysql.yml
@@ -38,7 +38,7 @@ services:
     container_name: phpmyadmin_container
 
     environment:
-      PMA_HOST: 172.17.0.1 # Use the actual IP from the previous command
+      PMA_HOST: 172.17.0.1
       MYSQL_ROOT_PASSWORD: test
 
     #links:
@@ -55,6 +55,7 @@ services:
 
 networks:
   vbnetwork:
+    external: true
 
 volumes:
   mysql:
