--- a/mysql.yml
+++ b/mysql.yml
@@ -5,7 +5,7 @@ services:
 
     image: mysql:8.0
 
-    container_name: mysql_container
+    # container_name: mysql_container
 
     # Setup mysql to use self-based hash password
     command: mysqld --default-authentication-plugin=mysql_native_password --bind-address=0.0.0.0
@@ -30,18 +30,18 @@ services:
       mode: replicated
       replicas: 1
       placement: 
-        constraints: [node.labels.mysql =- true]
+        constraints: [node.labels.mysql == true]
 
     networks:
       - vbnetwork
 
-    restart: always
+    # restart: always
 
   # Setup phpmyadmin
   phpmyadmin:
     image: phpmyadmin/phpmyadmin:5.1.0
 
-    container_name: phpmyadmin_container
+    # container_name: phpmyadmin_container
 
     environment:
       PMA_HOST: mysql #old:172.17.0.1
@@ -49,8 +49,8 @@ services:
       MYSQL_PASSWORD: test
       MYSQL_USER: user
 
-    #links:
-    #  - mysql:db
+    links:
+      - mysql:db
 
     ports:
       - 8000:80
