--- a/rabbitmq.yml
+++ b/rabbitmq.yml
@@ -11,6 +11,11 @@ services:
       RABBITMQ_DEFAULT_USER: "worker"
       RABBITMQ_DEFAULT_PASS: "worker"
       RABBITMQ_DEFAULT_VHOST: "/"
+    deploy:
+      mode: replicated
+      replicas: 1
+      placement:
+        constraints: [node.labels.rabbitmq == true]
     networks:
       - vbnetwork
 
@@ -22,6 +27,11 @@ services:
       - 5555:5555
     depends_on:
       - rabbitmq
+    deploy:
+      mode: replicated
+      replicas: 1
+      placement:
+        constraints: [node.labels.flower == true]
     networks:
       - vbnetwork
 
