--- a/local.ini
+++ b/local.ini
@@ -1,5 +1,5 @@
 [DEFAULT]
-MYSQL_HOST = mysql_container
+MYSQL_HOST = mysql
 MYSQL_USER = user
 MYSQL_PASSWORD = test
 MYSQL_PORT = 3306
@@ -10,7 +10,7 @@ MESSAGE_QUEUE_HOST = host.docker.internal
 MESSAGE_QUEUE_PORT = 5672
 
 [RELEASE]
-MYSQL_HOST = mysql_container
+MYSQL_HOST = mysql
 MYSQL_USER = user
 MYSQL_PASSWORD = test
 MYSQL_PORT = 3306
