--- a/crawler.yml
+++ b/crawler.yml
@@ -6,11 +6,11 @@ services:
     command: poetry run celery -A volleyballdata.tasks.worker worker --loglevel=info
     restart: always
     environment:
-      MYSQL_HOST=mysql
-      MYSQL_USER=user
-      MYSQL_PASSWORD=test
-      MYSQL_PORT=3306
-      MYSQL_DATABASE=volleyballdb
+      - MYSQL_HOST=mysql
+      - MYSQL_USER=user
+      - MYSQL_PASSWORD=test
+      - MYSQL_PORT=3306
+      - MYSQL_DATABASE=volleyballdb
     deploy:
       mode: replicated
       replicas: 1
