--- a/crawler.yml
+++ b/crawler.yml
@@ -4,7 +4,7 @@ services:
   crawler:
     image: hhsiehde/crawler:7.2.1 # crawler:7.2.1
     working_dir: /volleyballdata
-    command: poetry run celery -A tasks.worker worker --loglevel=info
+    command: poetry run celery -A volleyballdata.tasks.worker worker --loglevel=info
     restart: always
     environment:
       - MYSQL_HOST=mysql
