--- a/crawler.yml
+++ b/crawler.yml
@@ -3,7 +3,8 @@ version: '3.0'
 services:
   crawler:
     image: hhsiehde/crawler:7.2.1 # crawler:7.2.1
-    command: poetry run celery -A volleyballdata.tasks.worker worker --loglevel=info
+    working_dir: /volleyballdata/volleyballdata
+    command: poetry run celery -A tasks.worker worker --loglevel=info
     restart: always
     environment:
       - MYSQL_HOST=mysql
