--- a/crawler.yml
+++ b/crawler.yml
@@ -12,6 +12,8 @@ services:
       - MYSQL_PASSWORD=test
       - MYSQL_PORT=3306
       - MYSQL_DATABASE=volleyballdb
+      - MESSAGE_QUEUE_HOST=rabbitmq
+      - MESSAGE_QUEUE_PORT=5672
     deploy:
       mode: replicated
       replicas: 1
