--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ amqp = "^5.3.1"
 kombu = "^5.5.1"
 fastapi = "0.63.0"
 uvicorn = "0.14.0"
+pytest-cov = "2.11.1"
+pytest-mock = "3.5.1"
 
 [tool.poetry.dev-dependencies]
 
