--- a/local.ini
+++ b/local.ini
@@ -12,10 +12,11 @@ MESSAGE_QUEUE_PORT = 5672
 [RELEASE]
 MYSQL_HOST = mysql
 MYSQL_USER = user
-MYSQL_PASSWORD = test
+MYSQL_PASSWORD = riUuO+0bo74)
 MYSQL_PORT = 3306
 MYSQL_DATABASE = volleyballdb
 WORKER_ACCOUNT = worker
 WORKER_PASSWORD = worker
-MESSAGE_QUEUE_HOST = rabbitmq
+MESSAGE_QUEUE_HOST = host.docker.internal
+#rabbitmq
 MESSAGE_QUEUE_PORT = 5672
