--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,9 @@ pytest-mock = "3.5.1"
 
 [tool.poetry.dev-dependencies]
 
+[tool.poetry.group.dev.dependencies]
+pytest-dotenv = "^0.5.2"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
