--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ fastapi = "0.63.0"
 uvicorn = "0.14.0"
 pytest-cov = "2.11.1"
 pytest-mock = "3.5.1"
+scikit-learn = "1.3.2"
 
 [tool.poetry.dev-dependencies]
 
