Modified: Add description for etl.py

--- a/local.ini
+++ b/local.ini
@@ -12,7 +12,7 @@ MESSAGE_QUEUE_PORT = 5672
 [RELEASE]
 MYSQL_HOST = mysql
 MYSQL_USER = user
-MYSQL_PASSWORD = riUuO+0bo74)
+MYSQL_PASSWORD = i=&Zk)W*:VZ20VR1?7@{
 MYSQL_PORT = 3306
 MYSQL_DATABASE = volleyballdb
 WORKER_ACCOUNT = worker
