--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ uvicorn = "0.14.0"
 pytest-cov = "2.11.1"
 pytest-mock = "3.5.1"
 scikit-learn = "1.3.2"
+python-dotenv = "1.0.0"
+matplotlib = "3.7.5"
 
 [tool.poetry.dev-dependencies]
 
