--- a/api.yml
+++ b/api.yml
@@ -5,7 +5,6 @@ services:
     ports:
       - 8888:8888
     hostname: "api"
-    restart: always
     environment:
       - MYSQL_HOST=mysql
       - MYSQL_USER=user
@@ -17,6 +16,8 @@ services:
     deploy:
       mode: replicated
       replicas: 1
+      restart_policy:
+        condition: on-failure
       placement:
         constraints: [node.labels.api == true]
     networks:
